# bandits_for_electricity_systems

./: .gitignore  LinUCB copy.ipynb  LinUCB.ipynb  README.md  electrical_demand_data.csv  gitignore  load_reduction_linear_bandits.ipynb  main.py  part1_multi_armed_bandits.ipynb  part2_load_reduction_with_linear_bandits.ipynb  part3_demand_response_with_target_tracking_bandits.ipynb  pyproject.toml  target_tracking_bandit.ipynb  visualization_functions.py
